syntax = "proto3";

package com.example.dmzj_api.proto;

option java_outer_classname = "ComicDetailInfo";


message ComicDetailResponse {
  int32 Errno = 1;
  string Errmsg = 2;
  ComicDetailInfoResponse Data = 3;
}

message ComicDetailInfoResponse {
  int32 Id = 1;
  string Title = 2;
  int32 Direction = 3;
  int32 Islong = 4;
  int32 IsDmzj = 5;
  string Cover = 6;
  string Description = 7;
  int64 LastUpdatetime = 8;
  string LastUpdateChapterName = 9;
  int32 Copyright = 10;
  string FirstLetter = 11;
  string ComicPy = 12;
  int32 Hidden = 13;
  int32 HotNum = 14;
  int32 HitNum = 15;
  int32 Uid = 16;
  int32 IsLock = 17;
  int32 LastUpdateChapterId = 18;
  repeated ComicDetailTypeItemResponse Types = 19;
  repeated ComicDetailTypeItemResponse Status = 20;
  repeated ComicDetailTypeItemResponse Authors = 21;
  int32 SubscribeNum = 22;
  repeated ComicChapterListResponse Chapters = 23;
  int32 IsNeedLogin = 24;
  int32 IsHideChapter = 26;
}

message ComicDetailTypeItemResponse {
  int32 TagId = 1;
  string TagName = 2;
}

message ComicChapterListResponse {
  string Title = 1;
  repeated ComicChapterInfoResponse Data = 2;
}

message ComicChapterInfoResponse {
  int32 ChapterId = 1;
  string ChapterTitle = 2;
  int64 Updatetime = 3;
  int32 Filesize = 4;
  int32 ChapterOrder = 5;
  int32 IsFee = 6;
}
message ComicChapterResponse {
  int32 Errno = 1;
  string Errmsg = 2;
  ComicChapterDetail data = 3;
}

message ComicChapterDetail{
  int64 ChapterId = 1;
  int64 ComicId = 2;
  string Title = 3;
  int32 ChapterOrder = 4;
  int32 Direction = 5;
  repeated string PageUrl = 6;
  int32 Picnum = 7;
  repeated string PageUrlHD = 8;
  int32 CommentCount = 9;
}