syntax = "proto3";

package com.example.dmzj_api.proto;

option java_outer_classname = "ComicRankList";


message ComicRankListResponse {
  int32 Errno = 1;
  string Errmsg = 2;
  repeated ComicRankListItemResponse Data = 3;
}

message ComicRankListItemResponse {
  int32 ComicId = 1;
  string Title = 2;
  string Authors = 3;
  string Status = 4;
  string Cover = 5;
  string Types = 6;
  int64 LastUpdatetime = 7;
  string LastUpdateChapterName = 8;
  string ComicPy = 9;
  int32 Num = 10;
  int32 TagId = 11;
  string ChapterName = 12;
  int32 ChapterId = 13;
}